--- a/contact.html
+++ b/contact.html
@@ -56,82 +56,12 @@ you want the image to appear in your destination document. -->
 <td width="100%" height="366" align="right" valign="top"><p align="center">&nbsp;</p>
 <p align="center"><strong><font size="3" face="Arial, Helvetica, sans-serif">Contact Us</font></strong></p>
 <blockquote>
-<p align="left"><font size="3" face="Arial, Helvetica, sans-serif">If
-you would like additional information regarding Camerata, including the availability of recordings, please fill out the form below and &quot;click&quot; on the submit
-button. Any information you provide will be treated confidentially
-and will not be distributed outside of Camerata.</font></p>
+<p align="left"><font size="3" face="Arial, Helvetica, sans-serif">The Camerata Singers of Lake Forest performed their final 
+concert in June 2008.  This site reflects the pictoral and audio history of the group.  If you have questions regarding the
+site, you can contact Richard Holmes at the e-mail address:  sherlock75@comcast.net  </font></p>
 </blockquote>        <p align="left">&nbsp;</p>
 <form action="form.php" method="post" name="contact form" id="contact form">
-<table width="400" border="0" cellspacing="0" cellpadding="5">
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">First Name</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t1" type="text" id="t1">
-</font></td>
 </tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Last Name</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t2" type="text" id="t2">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Email Address</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t3" type="text" id="t3">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Address
-1</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t4" type="text" id="t4">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Address
-2</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t5" type="text" id="t5">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">City</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t6" type="text" id="t6">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">State</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t7" type="text" id="t7">
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Zip</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<input name="t8" type="text" id="t8">
-</font></td>
-</tr>
-<tr>
-<td height="79"><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">Comments</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<textarea name="t9" id="t9"></textarea>
-</font></td>
-</tr>
-<tr>
-<td><div align="right"><font size="2" face="Arial, Helvetica, sans-serif">
-<input type="submit" name="Submit" value="Submit">
-</font></div></td>
-<td><font size="2" face="Arial, Helvetica, sans-serif">
-<img src="images/ts_single_pixel.gif" name="spacer" width="75" height="1" id="spacer">
-<input name="Reset" type="reset" id="Reset" value="Reset">
-</font></td>
-</tr>
-</table>
-</form>        <p align="left">&nbsp;</p></td>
-</tr>
-</table>
 <font size="2" face="Arial, Helvetica, sans-serif"></font> </div>
 <table cool width="816" height="566" border="0" cellpadding="0" cellspacing="0"  gridx="16" showgridx gridy="16" showgridy>
 <tr height="1" cntrlrow>
