--- a/contact.html
+++ b/contact.html
@@ -1,220 +1,21 @@
 <html>
-<head>
-<title>Contact Us</title>
-<script language="JavaScript">
-function MM_preloadImages() { //v3.0
-var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-//-->
-</script>
-<script language="JavaScript" type="text/JavaScript">
-<!--
-function MM_reloadPage(init) {  //reloads the window if Nav4 resized
-if (init==true) with (navigator) {if ((appName=="Netscape")&&(parseInt(appVersion)==4)) {
-document.MM_pgW=innerWidth; document.MM_pgH=innerHeight; onresize=MM_reloadPage; }}
-else if (innerWidth!=document.MM_pgW || innerHeight!=document.MM_pgH) location.reload();
-}
-MM_reloadPage(true);
 
-function MM_swapImgRestore() { //v3.0
-var i,x,a=document.MM_sr; for(i=0;a&&i<a.length&&(x=a[i])&&x.oSrc;i++) x.src=x.oSrc;
-}
+  <head>
+    <title>Contact Us</title>
+    <style>
+      body { background-color:#738ef0; margin: 0; font-family: sans-serif }
+      h1 { text-align: center; font-size: 1.2rem }
+      .logo { margin: 20px 10px 20px 35px }
+      .panel { margin:10px 25%; border:30px solid #beaeff; background: #fff; padding: 40px }
+    </style>
+  </head>
 
-function MM_findObj(n, d) { //v4.01
-var p,i,x;  if(!d) d=document; if((p=n.indexOf("?"))>0&&parent.frames.length) {
-d=parent.frames[n.substring(p+1)].document; n=n.substring(0,p);}
-if(!(x=d[n])&&d.all) x=d.all[n]; for (i=0;!x&&i<d.forms.length;i++) x=d.forms[i][n];
-for(i=0;!x&&d.layers&&i<d.layers.length;i++) x=MM_findObj(n,d.layers[i].document);
-if(!x && d.getElementById) x=d.getElementById(n); return x;
-}
+  <body>
+    <img class="logo" src="images/Camerata_Singers_of_Lake_Forest_logo.png" width="193" height="169" alt="Camerata Singers of Lake Forest"/>
+    <div class="panel">
+      <h1>Contact Us</h1>
+      <p>The Camerata Singers of Lake Forest performed their final concert in June 2008. This site reflects the pictoral and audio history of the group. If you have questions regarding the site, you can contact Richard Holmes at the e-mail address: sherlock75@comcast.net</p>
+    </div>
+  </body>
 
-function MM_swapImage() { //v3.0
-var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
-if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
-}
-
-function MM_showHideLayers() { //v6.0
-var i,p,v,obj,args=MM_showHideLayers.arguments;
-for (i=0; i<(args.length-2); i+=3) if ((obj=MM_findObj(args[i]))!=null) { v=args[i+2];
-if (obj.style) { obj=obj.style; v=(v=='show')?'visible':(v=='hide')?'hidden':v; }
-obj.visibility=v; }
-}
-//-->
-</script>
-
-<body bgcolor="#738ef0" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<div id="about" style="position:absolute; width:507px; height:500px; z-index:1; left: 218px; top: 90px; background-color: #BEAEFF; layer-background-color: #BEAEFF; border: 1px none #000000; visibility: visible;"></div>
-<!-- Copy the below image map table code and paste it where
-you want the image to appear in your destination document. -->
-<!------ START COPYING BELOW THIS LINE -------->
-<!-- Image Map Table -->
-<div id="about2" style="position:absolute; width:450px; height:445px; z-index:1; left: 245px; top: 117px; background-color: #FFFFFF; layer-background-color: #FFFFFF; border: 1px none #000000; visibility: visible; overflow: visible;">
-<table width="100%" border="0" cellpadding="8" cellspacing="0">
-<tr>
-<td width="100%" height="366" align="right" valign="top"><p align="center">&nbsp;</p>
-<p align="center"><strong><font size="3" face="Arial, Helvetica, sans-serif">Contact Us</font></strong></p>
-<blockquote>
-<p align="left"><font size="3" face="Arial, Helvetica, sans-serif">The Camerata Singers of Lake Forest performed their final 
-concert in June 2008.  This site reflects the pictoral and audio history of the group.  If you have questions regarding the
-site, you can contact Richard Holmes at the e-mail address:  sherlock75@comcast.net  </font></p>
-</blockquote>        <p align="left">&nbsp;</p>
-<form action="form.php" method="post" name="contact form" id="contact form">
-</tr>
-<font size="2" face="Arial, Helvetica, sans-serif"></font> </div>
-<table cool width="816" height="132" border="0" cellpadding="0" cellspacing="0"  gridx="16" showgridx gridy="16" showgridy>
-<tr height="1" cntrlrow>
-<td width="1" height="1"></td>
-<td width="57" height="1"><spacer type="block" width="57" height="1"></td>
-<td width="47" height="1"><spacer type="block" width="47" height="1"></td>
-<td width="5" height="1"><spacer type="block" width="5" height="1"></td>
-<td width="10" height="1"><spacer type="block" width="10" height="1"></td>
-<td width="74" height="1"><spacer type="block" width="74" height="1"></td>
-<td width="74" height="1"><spacer type="block" width="74" height="1"></td>
-<td width="38" height="1"><spacer type="block" width="38" height="1"></td>
-<td width="65" height="1"><spacer type="block" width="65" height="1"></td>
-<td width="22" height="1"><spacer type="block" width="22" height="1"></td>
-<td width="65" height="1"><spacer type="block" width="65" height="1"></td>
-<td width="22" height="1"><spacer type="block" width="22" height="1"></td>
-<td width="65" height="1"><spacer type="block" width="65" height="1"></td>
-<td width="22" height="1"><spacer type="block" width="22" height="1"></td>
-<td width="65" height="1"><spacer type="block" width="65" height="1"></td>
-<td width="38" height="1"><spacer type="block" width="38" height="1"></td>
-<td width="53" height="1"><spacer type="block" width="53" height="1"></td>
-<td width="90" height="1"><spacer type="block" width="90" height="1"></td>
-<td width="1" height="1"><spacer type="block" width="1" height="1"></td>
-</tr>
-<tr height="82">
-<td width="1" height="82"><spacer type="block" width="1" height="282"></td>
-<td width="193" height="82" colspan="5" rowspan="1" valign="top" align="left" xpos="1">&nbsp;</td>
-<td width="74" height="82"></td>
-<td width="38" height="82"></td>
-<td width="65" height="82"></td>
-<td width="22" height="82"></td>
-<td width="65" height="82"></td>
-<td width="22" height="82"></td>
-<td width="65" height="82"></td>
-<td width="22" height="82"></td>
-<td width="65" height="82"></td>
-<td width="38" height="82"></td>
-<td width="53" height="82"></td>
-<td width="1" height="82"></td>
-</tr>
-<tr height="49">
-<td width="1" height="49"><spacer type="block" width="1" height="49"></td>
-<td width="812" height="49" colspan="17" rowspan="1" valign="top" align="left" xpos="1"><img src="images/ts_single_pixel.gif" alt="" width="781" height="1"></td>
-<td width="1" height="49" colspan="1" rowspan="1" valign="top" align="left" xpos="813"><img src="images/ts_single_pixel.gif" alt="" width="1" height="1"></td>
-</tr>
-</table>
-<!--   This Image Map Table was created with TypeStyler (tm) 3   -->
-<!--   http://www.typestyler.com   -->
-
-
-<!------ STOP COPYING ABOVE THIS LINE-------->
-
-
-</body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
